<resources>
    <string name="app_name">MaxPe</string>
    <string name="default_notification_channel_id">999999</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="exit">Exit?</string>
    <string name="yes">Yes</string>
    <string name="allow">Allow</string>
    <string name="no">No</string>
    <string name="sure">Are you sure?</string>
    <string name="welcome_txt">Welcome To\nEG Payment</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="school_info">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_password">Change Password</string>
    <string name="btn_ok">OK</string>
    <string name="no_network_message">Thank you to check your internet connection.</string>
    <string name="no_internet">No Internet</string>
    <string name="enable">Enable</string>
    <string name="permission">We need to permissions for performing necessary task. Please permit the permission through Settings screen.\n\nSelect Permissions -> Enable permission</string>
    <string name="logout">Log Out!</string>
    <string name="logout_text">Are you sure for logout?</string>
    <string name="sponsor_id">Sponsor Id</string>
    <string name="full_name">Full Name</string>
    <string name="email_">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="firm_name">First Name</string>
    <string name="member_description">Member Description</string>
    <string name="Pincode">Pincode</string>
    <string name="gst_no">GST No</string>
    <string name="description">Description</string>
    <string name="max_pe">MaxPe</string>
    <string name="add_member">Add Member</string>
    <string name="closing_amount">Closing Amount</string>
    <string name="country">Country</string>
    <string name="landmark">Landmark</string>
    <string name="Shop_name">Shop Name</string>
    <string name="master">Master</string>
    <string name="distributor">Distributor</string>
    <string name="payment_mode">Payment Mode : </string>
    <string name="wallet">Wallet</string>
    <string name="retry">Re-Try</string>
    <string name="email">Email : </string>
    <string name="address">Address : </string>
    <string name="iperror">Check your internet connection or change internet once.</string>
    <string name="error">Check your internet connection or change internet once.</string>
    <string name="amount">Amount <font color="red">(1 to 100000)</font></string>
    <string-array name="bill_provider">
        <item>Education Fees</item>
        <item>Loan Repayment</item>
        <item>Electricity</item>
        <item>Broadband Postpaid</item>
        <item>Water</item>
        <item>Municipal Taxes</item>
        <item>Insurance</item>
        <item>Housing Society</item>
        <item>Gas</item>
        <item>FASTag</item>
        <item>Subscription</item>
        <item>Mobile Postpaid</item>
        <item>Landline Postpaid</item>
        <item>Cable TV</item>
        <item>Clubs and Associations</item>
        <item>DTH</item>
        <item>Life Insurance</item>
        <item>LPG Gas</item>
        <item>Hospital and Pathology</item>
        <item>Municipal Services</item>
        <item>Credit Card</item>
        <item>Health Insurance</item>
        <item>Mobile Prepaid</item>
        <item>Recurring Deposit</item>
    </string-array>
    <string name="paytm_payment_gateway"><font color="#000000"><b>Paytm</b></font> <br /> Payment Gateway</string>
    <string name="upi_phonepe_gateway"><font color="#000000"><b>UPI</b></font> <br /> <br /> (PhonePe <br /> Gateway)</string>
    <string name="razorpay_payment_gateway"><font color="#000000"><b>Razorpay</b></font> <br /> Payment Gateway</string>
    <string name="mobile_banking_neft_imps"><font color="#000000"><b>Mobile</b></font> <br /> Banking <br /> (NEFT, IMPS)</string>
    <string name="bharat_pay">Bharat Pay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slug_first_fragment">One-stop solution for all \nyour Recharge and Bill\nPayments</string>
    <string name="slug_second_fragment">Spend And Earn\nGuaranteed Cashback\nOn Every Recharge...</string>
    <string name="slug_third_fragment">*Get a Chance to Win\nUpto ₹100 on Every 5\nReferrals</string>
    <string name="view_plan_details">View Plan Details</string>
    <string name="cancel">Cancel</string>
    <string name="image">image</string>
    <string name="b_connect_complain_registration">B-Connect Complain Registration</string>
    <string name="refund_cancellation_amp_refund_policy"><![CDATA[Refund, Cancellation & refund Policy]]></string>
    <string name="feedback">Feedback</string>
    <string name="invite_amp_earn"><![CDATA[Invite & Earn]]></string>
    <string name="follow_us">Follow Us</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="language">Language</string>
    <string name="change_mpin">Change Mpin</string>
    <string name="reset_mpin">Reset Mpin</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_amp_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="bharat_ka_napna_pe">BHARAT KA\nAPNA PE!</string>
    <string name="maxpe">MAXPE</string>
    <string name="save_big_with_india_s_1_discount_app">Save Big with India\'s #1 Discount App</string>
    <string name="re_try">Re-Try</string>
    <string name="no_internet_available_ncheck_connection">No Internet available.\nCheck connection</string>
    <string name="your_account">Your Account</string>
    <string name="recharge_amp_bill_payment"><![CDATA[Recharge & Bill Payment]]></string>
    <string name="commission_chart">Commission Chart</string>
    <string name="add_balance">Add Balance</string>
    <string name="your_balance">Your balance</string>
    <string name="bike_car_insurance">Bike/Car Insurance</string>
    <string name="bike_insurance">Bike Insurance</string>
    <string name="submit_your_feedback">Submit Your Feedback</string>
    <string name="_10_off">10% OFF</string>
    <string name="car_insurance">Car Insurance</string>
    <string name="_15_off">15% OFF</string>
    <string name="sony_liv">Sony LIV</string>
    <string name="netflix">Netflix</string>
    <string name="jiohotstar">JioHotstar</string>
    <string name="offers_for_you">Offers For You</string>
    <string name="spotlight_services">Spotlight Services</string>
    <string name="prepaid">Prepaid</string>
    <string name="dth">DTH</string>
    <string name="electricity">Electricity</string>
    <string name="credit_card">Credit Card</string>
    <string name="tutorials">Tutorials</string>
    <string name="commission_report">COMMISSION REPORT</string>
    <string name="view_nmember">View\nMember</string>
    <string name="new_nmember">New\nMember</string>
    <string name="downline_npackages">Downline\nPackages</string>
    <string name="you">You</string>
    <string name="refer_your_friends_amp"><![CDATA[Refer your 10 friends &]]></string>
    <string name="earn_up_to_300">earn up to ₹300</string>
    <string name="support">Support</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="report">Reports</string>
    <string name="commission">Commission</string>
    <string name="chat">Chat</string>
    <string name="impty"></string>
    <string name="need_help_nwe_re_here_nfor_you">Need Help?\nWe\'re Here\nfor You!</string>
    <string name="call_support">Call Support</string>
    <string name="_7390903230">7390903230</string>
    <string name="chat_on_whatsapp">Chat on Whatsapp</string>
    <string name="email_us">Email Us</string>
    <string name="support_maxpe_in">Support@maxpe.in</string>
    <string name="share_your_nfeedback">Share Your\nFeedback!</string>
    <string name="prepaid_toll_free_number">Prepaid Toll Free Number</string>
    <string name="stay_updated">Stay Updated!</string>
    <string name="follow_our_whatapp_channel">Follow our WhatApp channel</string>
    <string name="daily_updated">Daily Updated!</string>
    <string name="follow_our_instagram">Follow our Instagram</string>
    <string name="dth_toll_free_number">DTH Toll Free Number</string>
    <string name="my_bonus">My Bonus</string>
    <string name="_100_00">₹100.00</string>
    <string name="max_points">Max Points</string>
    <string name="_5">5</string>
    <string name="successful_n_referral">Successful\n Referral</string>
    <string name="_5_more">5 More</string>
    <string name="remaining_nreferral">Remaining \nReferral</string>
    <string name="_20">20</string>
    <string name="total_referral">Total Referral</string>
    <string name="your_referral_code">Your Referral Code</string>
    <string name="copy">Copy</string>
    <string name="how_it_works">How It Works</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="refer_maxpe_to">Refer MaxPe to</string>
    <string name="_10_friends">10 friends</string>
    <string name="each_friend_n_must_deposit">Each friend\n must deposit</string>
    <string name="_100">₹100</string>
    <string name="or_more">or more</string>
    <string name="in_their_maxpe_wallet">in their MaxPe wallet</string>
    <string name="get_300">Get ₹300</string>
    <string name="bonus_150_in_n_maxpe_wallet_n_150_in_n_maxpoints">bonus: ₹150 in\n MaxPe Wallet\n + ₹150 in\n MaxPoints</string>
    <string name="additional_bonus">Additional Bonus</string>
    <string name="earn_up_to">Earn up to</string>
    <string name="_1_commission">1% Commission</string>
    <string name="on_every_prepaid_recharge_amp_dth_bill_paid_by_your_referred_users_the_more_they_use_maxpe_the_more_you_earn"><![CDATA[On every prepaid recharge & DTH bill paid by your referred users! The more they use MaxPe, the more you earn.]]></string>
    <string name="t_amp_c_apply"><![CDATA[T&C apply]]></string>
    <string name="top_earner_on_maxpe">Top Earner on MaxPe</string>
    <string name="are_you_sure_you_want_to_continue">Are you sure you want to continue?</string>
    <string name="if_you_delete_your_account_you_ll_lose_access_to_all_services_and_ncashback_benefits">If you delete your account, you’ll lose access to all services and\ncashback benefits.</string>
    <string name="we_will_miss_you">We Will Miss You!</string>
    <string name="loading_please_wait">Loading, please wait ..</string>
    <string name="help">Help?</string>
    <string name="enter_amount_to_add">Enter amount to add</string>
    <string name="_0">0</string>
    <string name="get_unlimited_caskback_on_your_nevery_recharge_and_bill_payments">Get Unlimited Caskback On Your\nEvery Recharge and Bill Payments</string>
    <string name="_100_">100%</string>
    <string name="secure">Secure</string>
    <string name="trusted_by">Trusted By</string>
    <string name="_3m_users">3M+ Users</string>
    <string name="powered_by_">Powered By</string>
    <string name="trusted_by_30_lacs_happy_users">Trusted By 30+ Lacs Happy Users</string>
    <string name="made_in">Made In भारत</string>
    <string name="_100_safe_and_secure">100% Safe And Secure</string>
    <string name="_10">10</string>
    <string name="airtel">Airtel</string>
    <string name="are_you_sure_for_logout">Are you sure for logout?</string>
    <string name="bonus_on_balance_add">Bonus on Balance add</string>
    <string name="oder_id_52422222">Oder Id : 52422222</string>
    <string name="_20_march_2025_10_00_pm">20 March 2025, 10:00 PM</string>
    <string name="active">Active</string>
    <string name="popular" translatable="false">Popular</string>
    <string name="_1_60">1.60%</string>
    <string name="guaranteed">Guaranteed</string>
</resources>