<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_3sdp"
    android:padding="@dimen/_5sdp">


    <ImageView
        android:id="@+id/imgMaxLogo"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:src="@drawable/points_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/points_usedTV"
        app:layout_constraintBottom_toBottomOf="@id/points_dateTV"/>

    <TextView
        android:id="@+id/points_usedTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bonus_on_balance_add"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@id/imgMaxLogo"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/points_orderIdTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#6E6E6E"
        android:text="@string/oder_id_52422222"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/points_usedTV"
        app:layout_constraintStart_toStartOf="@id/points_usedTV"
        />


    <TextView
        android:id="@+id/points_dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20_march_2025_10_00_pm"
        android:textSize="@dimen/_9sdp"
        android:textColor="#B2B2B2"
        app:layout_constraintStart_toStartOf="@id/points_usedTV"
        app:layout_constraintTop_toBottomOf="@id/points_orderIdTV"
        app:layout_constraintBottom_toTopOf="@id/viewPoints"
        />

    <TextView
        android:id="@+id/pointsAmountTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/mLogo"
        app:layout_constraintTop_toTopOf="@id/points_orderIdTV"
        />

    <ImageView
        android:id="@+id/mLogo"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:src="@drawable/group_12772"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_1sdp"
        app:layout_constraintTop_toTopOf="@id/pointsAmountTV"
        app:layout_constraintBottom_toBottomOf="@id/pointsAmountTV"
        />

    <View
        android:id="@+id/viewPoints"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/points_dateTV"
        android:background="#F8F8F8"
        />


</androidx.constraintlayout.widget.ConstraintLayout>