<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_55sdp"
    android:background="@drawable/commission_item_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    
    <View
        android:id="@+id/viewItem"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:background="@drawable/view_item_commission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgLogo"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintStart_toStartOf="@id/viewItem"
        app:layout_constraintTop_toTopOf="@id/viewItem"
        app:layout_constraintBottom_toBottomOf="@id/viewItem"
        app:layout_constraintEnd_toEndOf="@id/viewItem"/>

    <TextView
        android:id="@+id/txtOperator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/airtel"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_11sdp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toEndOf="@id/viewItem"
        app:layout_constraintTop_toTopOf="@id/viewItem"
        app:layout_constraintBottom_toTopOf="@id/active"
        />
<!--    android:textColor="#242424"-->
<!--    android:singleLine="true"-->

    <TextView
        android:id="@+id/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:textColor="#676767"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/txtOperator"
        app:layout_constraintStart_toStartOf="@id/txtOperator"
        app:layout_constraintBottom_toBottomOf="@id/viewItem"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hightLight"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_15sdp"
        android:background="@drawable/highlight_bg"
        app:layout_constraintTop_toTopOf="@id/txtOperator"
        app:layout_constraintStart_toEndOf="@id/txtOperator"
        app:layout_constraintBottom_toBottomOf="@id/txtOperator"
        android:paddingEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_7sdp"
        >

        <ImageView
            android:id="@+id/star_ImgV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/popular"
            android:textSize="11sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/star_ImgV"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>




    <TextView
        android:id="@+id/txtOperatorValue"
        android:layout_width="0dp"
        android:layout_height="@dimen/_22sdp"
        android:text="@string/_1_60"
        android:background="@drawable/commission_bg"
        android:layout_marginEnd="@dimen/_12sdp"
        android:elevation="@dimen/_3sdp"
        android:textStyle="bold"
        android:gravity="center"
        android:ellipsize="start"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewItem"
        app:layout_constraintBottom_toTopOf="@id/guaranteed"
        />

    <TextView
        android:id="@+id/guaranteed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guaranteed"
        android:textSize="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:textColor="#676767"
        app:layout_constraintBottom_toBottomOf="@id/viewItem"
        app:layout_constraintTop_toBottomOf="@id/txtOperatorValue"
        app:layout_constraintEnd_toEndOf="@id/txtOperatorValue"
        />

</androidx.constraintlayout.widget.ConstraintLayout>